--- a/index.html
+++ b/index.html
@@ -1,147 +1,110 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>San Francisco Magu</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>San Francisco Magu</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <h1>San Francisco Magu</h1>
+    <h1>San Francisco Magu</h1>
 
-  <img src="logo.png" alt="Logo CECyTEM" class="logo" />
+    <img src="https://images.app.goo.gl/FfXtK3szUQ2xCbAe8" alt="Logo CECyTEM" class="logo"/>
 
-  <div class="botones">
-    <a href="#servicios"><button>Servicios locales</button></a>
-    <a href="#eventos"><button>Eventos</button></a>
-    <a href="#escrituras"><button>Escrituras</button></a>
-    <a href="#opinion"><button>Opinión de Usuario</button></a>
-  </div>
+    <div class="botones">
+        <button onclick="scrollToSection('servicios')">Servicios locales</button>
+        <button onclick="scrollToSection('eventos')">Eventos</button>
+        <button onclick="scrollToSection('escrituras')">Escrituras</button>
+        <button onclick="scrollToSection('opinion')">Opinión de Usuario</button>
+    </div>
 
-  <p class="descripcion">
-    San Francisco Magu es un pueblo Indígena, Otomí de usos y costumbres
-  </p>
+    <p class="descripcion">
+        San Francisco Magu es un pueblo Indígena, Otomí de usos y costumbres.
+    </p>
 
-  <img src="edificio.jpg" alt="Edificio San Francisco Magu" class="imagen-principal" />
+    <img src="https://images.app.goo.gl/xF9qBRxUf3fKH9BQ8" alt="Edificio San Francisco Magu" class="imagen-principal"/>
 
-  <p class="info">
-    Delegación y Copaci San Francisco Magu.<br />
-    Como responsable: Juana Lisbeth Flores Segundo, Delegada Municipal<br />
-    Municipio: Nicolás Romero<br />
-    Número Telefónico: 5631060708
-  </p>
+    <p class="info">
+        Delegación y Copaci San Francisco Magu.<br>
+        Como responsable: Juana Lisbeth Flores Segundo, Delegada Municipal<br>
+        Municipio: Nicolás Romero<br>
+        Número Telefónico: 5631060708
+    </p>
 
-  <!-- Servicios -->
-  <section id="servicios">
-    <h2>Delegación y COPACI - San Francisco Magú</h2>
-    <p>Atendemos tus trámites y documentación</p>
+    <!-- Sección Servicios -->
+    <section id="servicios">
+        <h2>Trámites y Servicios</h2>
+        <ul>
+            <li>Actas de nacimiento</li>
+            <li>Registro de propiedad</li>
+            <li>Permisos de construcción</li>
+        </ul>
+    </section>
 
-    <h3>📌 Trámites</h3>
-    <ul>
-      <li>Expedición de actas de nacimiento</li>
-      <li>Registro de propiedad</li>
-      <li>Permisos de construcción</li>
-    </ul>
+    <!-- Sección Eventos -->
+    <section id="eventos">
+        <h2>Eventos</h2>
+        <p>Celebraciones tradicionales:</p>
+        <ul>
+            <li>Día de Muertos</li>
+            <li>Fiesta Patronal</li>
+            <li>Desfile del 16 de Septiembre</li>
+            <li>Jornadas de Salud</li>
+            <li>Feria del Pueblo</li>
+        </ul>
+    </section>
 
-    <h3>📎 Documentación</h3>
-    <ul>
-      <li>Identificación oficial</li>
-      <li>Comprobante de domicilio</li>
-      <li>CURP</li>
-    </ul>
+    <!-- Sección Escrituras -->
+    <section id="escrituras">
+        <h2>Escrituras</h2>
+        <h3>Precios Terreno</h3>
+        <ul>
+            <li>18 ha: $130/m²</li>
+            <li>12 ha: $500/m²</li>
+            <li>8,500 m²: $150/m²</li>
+        </ul>
+        <h3>Documentación Necesaria</h3>
+        <ul>
+            <li>INE</li>
+            <li>CURP</li>
+            <li>Comprobante de domicilio</li>
+            <li>Acta de nacimiento</li>
+            <li>Contrato de compraventa</li>
+        </ul>
+    </section>
 
-    <h3>⚖ Información Legal</h3>
-    <p>Normativas y reglamentos aplicables en la comunidad.</p>
-    <p><a href="#">Descargar reglamento local (PDF)</a></p>
+    <!-- Sección Opinión -->
+    <section id="opinion">
+        <h2>Opinión del Usuario</h2>
+        <form>
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required><br>
 
-    <h3>📞 Contacto</h3>
-    <p>📍 Dirección: San Francisco Magú, Estado de México</p>
-    <p>📩 Correo: info@sanfranciscomagu.gob.mx</p>
-    <p>📞 Teléfono: 55-1234-5678</p>
-    <a href="https://wa.me/5215512345678">Enviar WhatsApp</a>
-  </section>
+            <label for="edad">Edad:</label>
+            <input type="text" id="edad" name="edad" required><br>
 
-  <!-- Eventos -->
-  <section id="eventos">
-    <h2>Festividades de San Francisco Magú</h2>
-    <p>Celebraciones tradicionales en Nicolás Romero, Estado de México</p>
+            <label for="satisfaccion">Satisfacción:</label>
+            <select id="satisfaccion" name="satisfaccion">
+                <option value="muy_satisfecho">Muy satisfecho</option>
+                <option value="satisfecho">Satisfecho</option>
+                <option value="neutral">Neutral</option>
+                <option value="insatisfecho">Insatisfecho</option>
+                <option value="muy_insatisfecho">Muy insatisfecho</option>
+            </select><br>
 
-    <h3>Historia de San Francisco Magú</h3>
-    <p>San Francisco Magú pertenece a uno de los históricos poblados, en el que su asentamiento data del siglo XII. Fue reconocido como pueblo indígena otomí, lo que hace obligatorio el respeto a sus usos y costumbres.</p>
+            <label for="comentarios">Comentarios:</label>
+            <textarea id="comentarios" name="comentarios" rows="2" required></textarea><br>
 
-    <h3>Ofrendas del Día de Muertos</h3>
-    <p>Flores, pan de muerto, frutas y bebidas típicas para honrar a los difuntos.</p>
+            <button type="submit">Enviar Opinión</button>
+        </form>
+    </section>
 
-    <h3>Fiesta Patronal de San Francisco de Asís</h3>
-    <p>El 4 de octubre se celebra con misas, procesiones y eventos culturales.</p>
-
-    <h3>Desfile del 16 de Septiembre</h3>
-    <p>Participan escuelas e instituciones locales.</p>
-
-    <h3>Jornada Cultural y de Salud</h3>
-    <p>Actividades culturales y servicios de salud gratuitos.</p>
-
-    <h3>Feria del Pueblo</h3>
-    <p>Juegos, comida, música y diversión familiar.</p>
-  </section>
-
-  <!-- Escrituras -->
-  <section id="escrituras">
-    <h2>Escrituras - San Francisco Magú</h2>
-
-    <h3>🏷️ Precios Actualizados</h3>
-    <ul>
-      <li><strong>Terreno (18 ha):</strong> $130/m² (~$1,300,000 por hectárea)</li>
-      <li><strong>Terreno (12 ha):</strong> $500/m² (~$5,000,000 por hectárea)</li>
-      <li><strong>Terreno chico (~8500 m²):</strong> $150/m² (~$1,275,000)</li>
-    </ul>
-    <p><em>*Precios sujetos a ubicación, servicios y si es terreno ejidal o privado.</em></p>
-
-    <h3>📄 Documentación Necesaria</h3>
-    <ul>
-      <li>INE</li>
-      <li>CURP</li>
-      <li>Comprobante de domicilio</li>
-      <li>Acta de nacimiento</li>
-      <li>Contrato de compraventa</li>
-      <li>Registro en padrón comunal</li>
-      <li>Cambio de uso de suelo (si aplica)</li>
-    </ul>
-
-    <h3>🧾 Consideraciones Fiscales</h3>
-    <p>En terrenos ejidales no se pagan prediales. En terrenos privados sí se deben pagar impuestos.</p>
-  </section>
-
-  <!-- Opinión -->
-  <section id="opinion">
-    <h2>Opinión del Usuario</h2>
-    <form action="#" method="post">
-      <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" name="nombre" required><br><br>
-
-      <label for="edad">Edad:</label>
-      <input type="text" id="edad" name="edad" required><br><br>
-
-      <label for="satisfaccion">Nivel de satisfacción:</label>
-      <select id="satisfaccion" name="satisfaccion">
-        <option value="muy_satisfecho">Muy satisfecho</option>
-        <option value="satisfecho">Satisfecho</option>
-        <option value="neutral">Neutral</option>
-        <option value="insatisfecho">Insatisfecho</option>
-        <option value="muy_insatisfecho">Muy insatisfecho</option>
-      </select><br><br>
-
-      <label for="comentarios">Comentarios:</label>
-      <textarea id="comentarios" name="comentarios" rows="2" required></textarea><br><br>
-
-      <button type="submit">Enviar Opinión</button>
-    </form>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Delegación San Francisco Magú. Todos los derechos reservados.</p>
-  </footer>
+    <script>
+        function scrollToSection(id) {
+            document.getElementById(id).scrollIntoView({ behavior: 'smooth' });
+        }
+    </script>
 
 </body>
 </html>
