--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </section><br>
 
   <img 
-    src="https://upload.wikimedia.org/wikipedia/commons/5/5e/San_Francisco_Magu.jpg" 
+    src="https://quintafuerzamx.s3.us-east-2.amazonaws.com/Leopard/uploads/2021/10/Magu-el-pueblo-de-Mexico-que-no-paga-impuestos.jpeg" 
     alt="San Francisco Magu" 
     class="imagen-magu" 
     id="imagenMagu"
